# caribou

./: .gitignore  Caribou.spec  README.md  build-mac.sh  ex.py  icon.icns  install-pyinstaller-mac.sh  pyproject.toml  setup.cfg  setup.py  test.py
caribou/: __init__.py  cli.py  decorators.py  exceptions.py  loader.py  models.py  storage.py  ui.py
tests/: test_route_loader.py
